welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:1: error: Missing closing brace `}' assumed here
var i=0
^PictureMono:3: error: expected class or object definition
def faireV{
^