welcome.lessons.welcome.methods.picture.PictureMono.scala.code
var i=0

def faireV{
	for(i<-1 to 5){
	avance()
	leveBrosse()
	baisseBrosse()
	
	
	
}
